	* Fix the "Set User Modes On Connect" and "Unset User Modes On Connect"
	  settings provided by irc-more on IRC accounts.
	* Fix Message Splitter so that it builds on Windows.
	* Fix Group Message so that its request dialog doesn't get too long.
	* Make IRC Helper suppress an additional message related to hostmasks.
	  (John Dennis)

Version 2.6.0: 08/30/09
	* Fix grouping of radio buttons in switchspell menu for enchant-enabled
	  GtkSpell.  This has the side effect of eliminating slow tab switching
	  and multiple language switches during menu drawing.  (Basil Gor)
	* Fixed a NULL deref crash in the slashexec plugin when processing a
	  chat room message.
	* Added XMPP Priority plugin.  This allows users to configure the
	  priority attribute for XMPP statuses on a per-account basis.
	* Added the "abusive" stress plugin.  This is a protocol plugin intended
	  for use in stressing libpurple and any plugins using libpurple's
	  facilities.  This plugin is still experimental and will almost certainly
	  cause some problems, so use with caution and do NOT use with your usual
	  .purple directory!

Version 2.5.1: 12/25/08
	* Really fixed switch spell now...

Version 2.5.0: 12/20/08
	* Fixed some crashes in autprofile related to old preference paths
	  (amishmm)
	* ListHandler now handles "FriendlyName" lines in .blt files generated by
	  newer Windows AIM versions when importing.
	* Added Vietnamese translation - thanks Nguyen Huu Phuoc 
	* findip and groupmsg are now default plugins.
	* Added nomobility plugin (does not yet work, doesn't build by default)
	* Fixed --with-plugins (yet again...)
	* Support dependency scenarios where dependency A OR dependency B is the
	  correct solution.  This fixes dependencies for switchspell, which can
	  use GTKSpell with either the Enchant backend or the aspell backend.
	  Let us know if you still have trouble building switchspell but have
	  the correct development packages installed.

Version 2.4.0: 08/03/08